package APIRateLimiter;

public class Client {
    public int time;
    public String clientId;
    public Client(int time, String c){
        this.time=time;
        this.clientId=c;
    }
}
