package APIRateLimiter;
public class RemoteResource {
    public void generate(String id){
        System.out.println("API Calling is Expensive... for client "+ id);
    }    
}
